--- a/covenant/src/css/main.css
+++ b/covenant/src/css/main.css
@@ -39,10 +39,43 @@ html {
 /*----------------frame start--------------------*/
 
 .header {
-    height: 60px;
     background: var(--gray);
     position: absolute;
     width: 100%;
+}
+
+.header__list {
+    list-style-type: none;
+}
+
+.header__list_home {
+    float: left;
+    font-family: var(--logo-font);
+    font-size: 34px;
+    color: var(--white);
+}
+
+.header__list_login, .header__list_signup {
+    float: right;
+    font-family: var(--main-font);
+    font-size: 20px;
+    color: var(--white);
+}
+
+.header__list_home__link {
+    display: block;
+    color: var(--white);
+    text-align: center;
+    padding: 5px 30px;
+    text-decoration: none;
+}
+
+.header__list_signup__link, .header__list_login__link {
+    display: block;
+    color: var(--white);
+    text-align: center;
+    padding: 12px 30px;
+    text-decoration: none;
 }
 
 .container {
@@ -57,61 +90,6 @@ html {
     width: 100%;
     height: 35px;
     background: var(--gray);
-}
-
-.logo {
-    width: 450px;
-    height: 60px;
-    font-family: var(--logo-font);
-    font-size: 35px;
-    line-height: 15px;
-    display: flex;
-    align-items: center;
-    text-align: center;
-
-    color: var(--white);
-}
-
-.logo__title{
-     width: 75%;
- }
-
-.login__link {
-    position: absolute;
-    width: 103px;
-    height: 33px;
-    left: 850px;
-    top: 12px;
-
-    font-family: var(--main-font);
-    font-style: normal;
-    font-weight: normal;
-    font-size: 20px;
-    line-height: 15px;
-
-    display: flex;
-    align-items: center;
-
-    color: var(--white);
-}
-
-.signup__link {
-    position: absolute;
-    width: 103px;
-    height: 33px;
-    left: 930px;
-    top: 12px;
-
-    font-family: var(--main-font);
-    font-style: normal;
-    font-weight: normal;
-    font-size: 20px;
-    line-height: 15px;
-
-    display: flex;
-    align-items: center;
-
-    color: var(--white);
 }
 
 /*----------------frame end--------------------*/
