profile page begin

--- a/covenant/src/css/main.css
+++ b/covenant/src/css/main.css
@@ -55,7 +55,8 @@ html {
     color: var(--white);
 }
 
-.header__list_login, .header__list_signup {
+.header__list_login, .header__list_signup,
+.header__list_name, .header__list_avatar {
     float: right;
     font-family: var(--main-font);
     font-size: 20px;
@@ -75,6 +76,22 @@ html {
     color: var(--white);
     text-align: center;
     padding: 12px 30px;
+    text-decoration: none;
+}
+
+.header__list_name__link {
+    display: block;
+    color: var(--white);
+    text-align: center;
+    padding: 12px 10px;
+    text-decoration: none;
+}
+
+.header__list_avatar__link {
+    display: block;
+    color: var(--white);
+    text-align: center;
+    padding: 5px 10px;
     text-decoration: none;
 }
 
