added profile info

--- a/covenant/src/css/main.css
+++ b/covenant/src/css/main.css
@@ -25,6 +25,7 @@ html {
 :root {
     --gray: #171717;
     --light-gray: #262626;
+    --soft-gray: #383838;
     --white: #FFFFFF;
     --red: #FF473A;
     --fb-color: #3B5998;
