added tabs on profile

--- a/covenant/src/css/profile.css
+++ b/covenant/src/css/profile.css
@@ -66,3 +66,61 @@
     vertical-align: middle;
     padding: 5px;
 }
+
+/*----------------tabs start--------------------*/
+.music {
+    padding: 30px 0 0 20px;
+}
+
+.tabs {
+    list-style-type: none;
+    position: relative;
+}
+.tabs:after {
+    content: "";
+    clear: both;
+    display: block;
+    height: 120px;
+}
+.tab__label {
+    font-family: var(--main-font);
+    color: var(--white);
+}
+
+.tabs li {
+    float: left;
+}
+.tabs li > input {
+    display: none;
+}
+.tabs li > label {
+    display: inline-block;
+    height: 30px;
+    line-height: 30px;
+    padding: 5px 20px;
+    cursor: pointer;
+}
+.tabs li:last-child > label {
+    border-right-width: 1px;
+}
+.tabs .tab-content {
+    display: none;
+    position: absolute;
+    left: 0;
+    padding: 20px;
+    border-top: 1px solid #999;
+    height: 120px;
+    overflow-y: auto;
+    font-family: var(--main-font);
+    color: var(--white);
+}
+
+.tabs li > input:checked + label {
+    background-color: #999;
+}
+
+.tabs li > input:checked ~ .tab-content {
+    display: block;
+}
+
+/*----------------tabs end--------------------*/
