Удален gulpfile, переделана структура проекта

--- a/covenant/public/components/Login/Login.css
+++ b/covenant/public/components/Login/Login.css
@@ -1,5 +1,5 @@
 
-/*----------------login start--------------------*/
+/*----------------Login start--------------------*/
 
 .login {
     width: 250px;
@@ -43,4 +43,4 @@
 }
 
 
-/*----------------login end--------------------*/
+/*----------------Login end--------------------*/
