--- a/covenant/public/components/Signup/Signup.css
+++ b/covenant/public/components/Signup/Signup.css
@@ -1,5 +1,5 @@
 
-/*----------------signup start--------------------*/
+/*----------------Signup start--------------------*/
 
 .signup {
     width: 250px;
@@ -54,4 +54,4 @@
 }
 
 
-/*----------------signup end--------------------*/
+/*----------------Signup end--------------------*/
