--- a/covenant/public/index.css
+++ b/covenant/public/index.css
@@ -61,7 +61,8 @@ html {
 }
 
 .header__list_login, .header__list_signup,
-.header__list_name, .header__list_avatar {
+.header__list_name, .header__list_avatar,
+.header__list_logout {
     float: right;
     font-family: var(--main-font);
     font-size: 20px;
@@ -92,7 +93,8 @@ html {
     text-decoration: none;
 }
 
-.header__list_avatar__link {
+.header__list_avatar__link,
+.header__list_logout__link {
     display: block;
     color: var(--white);
     text-align: center;
