publisher subsriber for render,  edit profile (for now without saving)

--- a/covenant/public/components/Profile/Profile.css
+++ b/covenant/public/components/Profile/Profile.css
@@ -29,8 +29,12 @@
     color: var(--white);
 }
 
-.info__user__edit {
+.info__user__edit, .info__user__save {
     display: inline-block;
+}
+
+.info__user__edit__img {
+    cursor: pointer;
 }
 
 .info__buttons {
