изменил названия ссылок регистрации/авторизации

--- a/components/Header/Header.pug
+++ b/components/Header/Header.pug
@@ -3,6 +3,6 @@ div(class="header")
         li(class="header__list_home")
             a(href="#" id="main_link" class="header__list_home__link") Covenant
         li(class="header__list_signup")
-            a(href="#" id="signup_link" class="header__list_signup__link") SignUp
+            a(href="#" id="signup_link" class="header__list_signup__link") Sign Up
         li(class="header__list_login")
-            a(href="#" id="login_link" class="header__list_login__link") Log In
+            a(href="#" id="login_link" class="header__list_login__link") Sign In
