обновил компоненты на ts

--- a/components/RegisterForm/RegisterForm.pug
+++ b/components/RegisterForm/RegisterForm.pug
@@ -1,5 +1,5 @@
 form(class="signup" id="signup-form")
-    h1(class="signup__title") Sign Up
+    h1(class="signup__title") Register
 
     div(class="signup__email")
         label(class="signup__email_label" for="signup__email_input") E-mail
@@ -14,10 +14,10 @@ form(class="signup" id="signup-form")
         input(class="signup__repeat_password_input" id="signup__repeat_password_input" name="signup__repeat_password_input" type="password")
 
     div(class="signup__submit")
-        button(class="signup__submit_button" type="submit") Sign Up
+        button(class="signup__submit_button" type="submit") Register
 
     div(class="signup__addition")
-        div(class="signup__social_label") Or Sign up Using
+        div(class="signup__social_label") Or Register Using
         
         div(class="signup_social_icons")
             a(href="#" class="fa fa-google")
