router begin, mvc structure

--- a/public/views/LoginView/LoginView.pug
+++ b/public/views/LoginView/LoginView.pug
@@ -1,4 +1,4 @@
-include ../Header/Header.pug
+include ../HeaderView/HeaderView.pug
 
 div(class="container")
 
@@ -22,4 +22,4 @@ div(class="container")
             a(class="login__forgot_password" href="#") Forgot your password?
             a(class="login__registration" href="#") Don’t have an account?
 
-include ../Footer/Footer.pug
+include ../FooterView/FooterView.pug
