--- a/public/views/SignupView/SignupView.pug
+++ b/public/views/SignupView/SignupView.pug
@@ -1,4 +1,4 @@
-include ../Header/Header.pug
+include ../HeaderView/HeaderView.pug
 
 div(class="container")
 
@@ -28,4 +28,4 @@ div(class="container")
                 a(href="#" class="fa fa-facebook")
                 a(href="#" class="fa fa-twitter")
 
-include ../Footer/Footer.pug
+include ../FooterView/FooterView.pug
