--- a/public/views/HeaderView/HeaderView.pug
+++ b/public/views/HeaderView/HeaderView.pug
@@ -1,10 +1,10 @@
 div(class="header")
     ul(class="header__list")
         li(class="header__list_home")
-            a(href="#" id="main_link" class="header__list_home__link") Covenant
+            button(id="main_link" class="header__list_home__btn btn btn_without_border" type="button") Covenant
 
         li(class="header__list_signup")
-            a(href="#" id="signup_link" class="header__list_signup__link") Sign Up
+           button(id="signup_link" class="header__list_signup__btn btn_without_border" type="button") Sign Up
 
         li(class="header__list_login")
-            a(href="#" id="login_link" class="header__list_login__link") Log In
+            button(id="login_link" class="header__list_login__btn btn_without_border" type="button") Log In
