added baseComponent. create separate components: input, loginform, signupform. move some logic to models.

--- a/public/components/LoginForm/LoginForm.css
+++ b/public/components/LoginForm/LoginForm.css
@@ -42,5 +42,11 @@
     color: var(--white);
 }
 
+.login__email_error, .login__password_error {
+    font-size: 10px;
+    color: var(--white);
+    margin-bottom: 3px;
+}
+
 
 /*----------------Login end--------------------*/
