--- a/public/components/SignupForm/SignupForm.css
+++ b/public/components/SignupForm/SignupForm.css
@@ -53,5 +53,11 @@
     width: 160px;
 }
 
+.signup__email_error, .signup__password_error,  .signup__repeat_error{
+    font-size: 10px;
+    color: var(--white);
+    margin-bottom: 3px;
+}
+
 
 /*----------------Signup end--------------------*/
