--- a/public/views/MainView/MainView.pug
+++ b/public/views/MainView/MainView.pug
@@ -1,5 +1,5 @@
-include ../HeaderView/HeaderView.pug
+div(class="header" id="header")
 
-div(class="container")
+div(class="container" id="container")
 
-include ../FooterView/FooterView.pug
+div(class="footer")
