--- a/public/views/ProfileView/ProfileView.pug
+++ b/public/views/ProfileView/ProfileView.pug
@@ -5,29 +5,17 @@ div(class="container" id="container")
 		div(class="profile")
 			div(class="avatar" id="avatar")
 
-			if user
-				div(class="info")
-					if !edit
-						div(class="info__user")
-							label(class="info__user__name") #{user.username}
-							div(class="info__user__edit")
-								img(id="edit_pencil" class="info__user__edit__img" src="img/edit.png" width="32" height="32" alt="edit")
-					else
-						div(class="info__user")
-							input(type="text" id="profile__name__input" value=user.username)
-							div(class="info__user__save")
-								img(id="save_info" class="info__user__edit__img" src="img/save.png" width="32" height="32" alt="save")
+			div(class="info")
+				div(class="info__user" id="info-user")
+				div(class="info__buttons")
+					div(class="info__buttons__shuffle")
+						button( class="btn__shuffle" type="button")
+							img(class="btn__shuffle__img" src="img/play_dark.png" width="32" height="32" alt="play")
+							label(class="btn__shuffle__label") Shuffle
 
-						div(class="info__buttons")
-							div(class="info__buttons__shuffle")
-								<button class="btn__shuffle" type="button">
-								<img  class="btn__shuffle__img" src="img/play_dark.png" width="32" height="32" alt="play"/>
-								<label class="btn__shuffle__label">Shuffle</label>
-								</button>
-
-							div(class="info__buttons__settings")
-								button(class="btn__settings" type="button")
-									img(class="btn__shuffle__settings" src="img/settings_dark.png" width="32" height="32" alt="settings")
+					div(class="info__buttons__settings")
+						button(class="btn__settings" type="button")
+							img(class="btn__shuffle__settings" src="img/settings_dark.png" width="32" height="32" alt="settings")
 
 		if tabs
 			div(class="music")
