--- a/public/components/SignupForm/SignupForm.pug
+++ b/public/components/SignupForm/SignupForm.pug
@@ -18,6 +18,7 @@ form(class="signup" id="signup-form")
 
     div(class="signup__submit")
         button(class="signup__submit_button" type="submit") Sign Up
+        div(class="signup__submit_error")
 
     div(class="signup__addition")
         div(class="signup__social_label") Or Sign up Using
