for authed user added posibility for like track

--- a/public/components/TrackList/TrackList.pug
+++ b/public/components/TrackList/TrackList.pug
@@ -10,4 +10,13 @@ div(class="track-list-container" id="track-container")
                         div(class="track__name__block")
                             div(class="track__name") #{track.name}
                             div(class="track__artist") #{track.artist}
+                        if favs != null
+                            div(class="track__like pull-right")
+                                if checkFavourite(track)
+                                    button(type="button" name="dislike" class="track__like_btn" id=track.id)
+                                        img(class="clickable" src="img/heart_fill.png" width="20" height="20" alt="like")
+                                else
+                                    button(type="button" name="like" class="track__like_btn" id=track.id)
+                                        img(class="clickable" src="img/heart.png" width="20" height="20" alt="like")
+
                         div(class="track__duration pull-right") #{track.duration}
