--- a/public/components/TrackList/TrackList.css
+++ b/public/components/TrackList/TrackList.css
@@ -23,7 +23,7 @@
 
 .track-container {
     height: 40px;
-    margin-bottom: 5px;
+    margin-bottom: 15px;
 }
 
 .track-container__inner {
@@ -53,7 +53,7 @@
     margin-left: 10px;
 }
 
-.track__duration {
+.track__duration, .track__like {
     display: inline-block;
     vertical-align: center;
 }
@@ -66,4 +66,13 @@
 
 .track__avatar__img {
     border-radius: 3px;
+}
+
+.track__like_btn {
+    text-decoration: none;
+    background-color: var(--gray);
+    border: none;
+    cursor: pointer;
+    border-radius: 10px;
+    vertical-align: top;
 }
