--- a/public/components/Header/Header.pug
+++ b/public/components/Header/Header.pug
@@ -13,10 +13,10 @@ ul(class="header__list")
             button(type="button" id="logout_link" class="header__list_logout__link")
                 img(src="img/logout.png" width="34" height="34" alt="logout")
         li(class="header__list_avatar")
-            a(href="" id="profile_avatar" class="header__list_avatar__link")
+            button(type="button" id="profile_avatar" class="btn_without_border header__list_avatar__link")
                 if user.avatar !== ''
                     img(src=user.avatar width="34" height="34" alt="user")
                 else
                     img(src="img/user.png" width="34" height="34" alt="user")
         li(class="header__list_name")
-            a(href="" id="profile_name" class="header__list_name__link") #{user.nickname}
+            button(type="button" id="profile_name" class="btn_without_border header__list_name__link") #{user.nickname}
