--- a/public/views/ProfileView/ProfileView.css
+++ b/public/views/ProfileView/ProfileView.css
@@ -55,6 +55,10 @@
     padding: 5px;
 }
 
+.profile__tracks {
+
+}
+
 /*----------------tabs start--------------------*/
 .music {
     padding: 30px 0 0 20px;
