--- a/public/index.scss
+++ b/public/index.scss
@@ -4,6 +4,8 @@
 @import url('components/Header/Header.css');
 @import url('components/EditableField/EditableField.css');
 @import url('components/TrackList/TrackList.css');
+@import "components/Menu/Menu";
+@import "vars";
 
 * {
     margin: 0;
