--- a/public/index.scss
+++ b/public/index.scss
@@ -6,6 +6,7 @@
 @import url('components/TrackList/TrackList.css');
 @import "components/Menu/Menu";
 @import "components/Home/AlbumList/AlbumList";
+@import "components/NewHeader/NewHeader";
 @import "views/HomeView/HomeView";
 @import "vars";
 
@@ -44,11 +45,11 @@
 }
 
 /*----------------frame start--------------------*/
-.header {
-    background: var(--gray);
-    position: absolute;
-    width: 100%;
-}
+//.header {
+//    background: var(--gray);
+//    position: absolute;
+//    width: 100%;
+//}
 
 .container {
     display: flex;
@@ -103,4 +104,49 @@
 
 .clickable {
     cursor: pointer;
+}
+
+
+.table {
+    display: table;
+}
+
+.table-cell {
+    display: table-cell;
+    text-align: center;
+    vertical-align: middle;
+}
+
+.pull-right {
+    float: right;
+}
+
+.pull-left {
+    float: left;
+}
+
+.pr {
+    padding-right: $padding-right-content;
+}
+
+.link {
+    text-align: center;
+    cursor: pointer;
+}
+
+.link:hover {
+    text-decoration: underline;
+}
+
+.form_btn {
+    width: 100%;
+    background-color: $accent-color;
+    color: #ffffff;
+    text-align: center;
+    height: 60px;
+    border-radius: 20px;
+    border: none;
+    font-size: 18px;
+    cursor: pointer;
+    font-weight: bold;
 }
