--- a/public/views/HomeView/HomeView.pug
+++ b/public/views/HomeView/HomeView.pug
@@ -1,2 +1,6 @@
 div(class="wrapper" id="wrapper")
+	div(id="menu")
+	div(class="content-container content-container-grid")
+		div(id="header")
+		div(class="content" id="content")
 div(class="player player-grid")
