--- a/public/components/NewHeader/NewHeader.scss
+++ b/public/components/NewHeader/NewHeader.scss
@@ -97,5 +97,7 @@
     height: 40px;
     vertical-align: middle;
     cursor: pointer;
+    border-radius: 40px;
+    border: solid 1px $accent-color;
   }
 }
