profile view added

--- a/public/views/ProfileView/ProfileView.pug
+++ b/public/views/ProfileView/ProfileView.pug
@@ -1,20 +1,9 @@
-div(class="header" id="header")
-
-div(class="container" id="container")
-	div(class="container__profile")
-		div(class="profile")
-			div(class="avatar" id="avatar")
-
-			div(class="info")
-				div(class="info__user" id="info-user")
-				div(class="info__buttons")
-					div(class="info__buttons__shuffle")
-						button( class="btn__shuffle" type="button")
-							img(class="btn__shuffle__img" src="img/play_dark.png" width="32" height="32" alt="play")
-							label(class="btn__shuffle__label") Shuffle
-
-					div(class="info__buttons__settings")
-						button(class="btn__settings" type="button")
-							img(class="btn__shuffle__settings" src="img/settings_dark.png" width="32" height="32" alt="settings")
-		div(class="profile__tracks" id="profile__tracks")
-div(class="footer")
+div(class="wrapper" id="wrapper")
+	div(id="menu")
+	div(class="content-container content-container-grid")
+		div(id="header")
+		div(class="content" id="content")
+			div(class="content-profile" id="content-profile")
+				div(class="user-info" id="user-info")
+				div(class="user-tabs" id="user-tabs")
+div(class="player player-grid")
