--- a/public/index.scss
+++ b/public/index.scss
@@ -1,4 +1,4 @@
-@import url('views/ProfileView/ProfileView.css');
+@import url('views/ProfileView/ProfileView.scss');
 @import url('components/SignupForm/SignupForm.css');
 @import url('components/LoginForm/LoginForm.css');
 @import url('components/Header/Header.css');
@@ -7,7 +7,10 @@
 @import "components/Menu/Menu";
 @import "components/Home/AlbumList/AlbumList";
 @import "components/NewHeader/NewHeader";
+@import "components/Profile/Profile";
+@import "components/ProfileSettings/ProfileSettings";
 @import "views/HomeView/HomeView";
+@import "views/ProfileView/ProfileView";
 @import "vars";
 
 * {
