links, update user and smth else

--- a/public/components/Menu/Menu.pug
+++ b/public/components/Menu/Menu.pug
@@ -2,7 +2,7 @@ div(class="menu")
     div(class="menu-title")
         div(class="menu-title__img")
             img(class="logo" src="img/record.png" alt="img")
-        div(class="menu-title__label")="Covenant"
+        div(class="menu-title__label" id="main_link")="Covenant"
     ul(class="menu-list")
         each item in defaultMenuItems
             li(class="menu-list__item")
