--- a/public/components/Profile/Profile.pug
+++ b/public/components/Profile/Profile.pug
@@ -1,9 +1,10 @@
 div
 	h1(class="title")="Profile"
 	div(class="user-info__inner")
-		div(class="user-info__aside")
-			img(class="user-info__aside-img" src="img/brody_big.png" alt="")
-		div(class="user-info__main")
-			div(class="user-info__main-nick")="@adam228"
-			div(class="user-info__main-email")="marshalityy@gmail.com"
-			div(class="user-info__main-logout" id="logout-link")="Log Out"
+		if (user)
+			div(class="user-info__aside")
+				img(class="user-info__aside-img" src=user.avatar alt="")
+			div(class="user-info__main")
+				div(class="user-info__main-nick")=`@${user.nickname}`
+				div(class="user-info__main-email")=user.email
+				div(class="user-info__main-logout" id="logout_link")="Log Out"
