--- a/public/components/ProfileSettings/ProfileSettings.scss
+++ b/public/components/ProfileSettings/ProfileSettings.scss
@@ -65,6 +65,10 @@
   cursor: pointer;
 }
 
+.settings-btn:hover {
+  box-shadow: 0 0 10px rgba(0,0,0,0.5);
+}
+
 .checkbox__label {
   font-size: 20px;
   font-weight: bold;
