--- a/public/components/ProfileSettings/ProfileSettings.pug
+++ b/public/components/ProfileSettings/ProfileSettings.pug
@@ -10,7 +10,7 @@ div
 					label(class="input-container__label" for="settings-nickname")="Nickname"
 					input(type="email" class="input-container__input" id="settings-nickname" value=user.nickname)
 				div(class="input-container")
-					button(type="button" class="settings-btn")="Update"
+					button(type="button" class="settings-btn" id="btn-update-profile")="Update"
 				div(class="input-container")
 					input(type="checkbox")
 					label(class="checkbox__label")="Private Account"
@@ -25,4 +25,4 @@ div
 					label(class="input-container__label" for="settings-repeat-password")="Repeat password"
 					input(type="email" class="input-container__input" id="settings-repeat-password")
 				div(class="input-container")
-					button(type="button" class="settings-btn")="Save"
+					button(type="button" class="settings-btn" id="btn-save-profile")="Save"
