--- a/public/components/SignupForm/SignupForm.pug
+++ b/public/components/SignupForm/SignupForm.pug
@@ -14,4 +14,4 @@ form(class="form_wrapper")
             label(for="signup__repeat_password_input" class="input_label")="Repeat password"
             input(class="input_field" type="password" id="signup__repeat_password_input")
         button(type="submit" class="form_btn")="Sign Up"
-        span(class="link")="Already have an account?"
+        span(class="link" id="login_link")="Already have an account?"
